--- a/templates/form/index.html
+++ b/templates/form/index.html
@@ -2,14 +2,19 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Génération de document</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="description" content="FO Métaux - DocEase - Générateur de documents">
+  <meta name="keywords" content="FO Métaux, syndicat, métallurgie, désignation">
+  
+  <title>DocEase - FO Métaux</title>
   
   <!-- External Libraries -->
   <!-- Tailwind CSS compilé localement (pour éviter Tracking Prevention) -->
   <link rel="stylesheet" href="assets/css/tailwind.css?v=1.0.0">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="shortcut icon" type="image/x-icon" href="https://www.fo-metaux.org/images/favicon.ico">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
   <!-- Mammoth.js pour prévisualisation Word (local pour éviter Tracking Prevention) -->
   <script src="assets/js/lib/mammoth.browser.min.js"></script>
